--- a/cuImage/PreferencesWindowController.xib
+++ b/cuImage/PreferencesWindowController.xib
@@ -26,17 +26,17 @@
             </view>
             <toolbar key="toolbar" implicitIdentifier="885C934F-4A10-440C-B29F-BF787E04D3CF" autosavesConfiguration="NO" displayMode="iconAndLabel" sizeMode="regular" id="itw-4w-zLM">
                 <allowedToolbarItems>
-                    <toolbarItem implicitItemIdentifier="A48C7778-9B2E-4E55-8B1F-A4F03BE4E538" label="General" paletteLabel="General" tag="-1" image="GeneralPreferences" selectable="YES" id="bua-bb-1FB">
+                    <toolbarItem implicitItemIdentifier="A48C7778-9B2E-4E55-8B1F-A4F03BE4E538" label="General" paletteLabel="General" image="GeneralPreferences" selectable="YES" id="bua-bb-1FB">
                         <connections>
                             <action selector="handleTappedToolbarItem:" target="-2" id="yqV-Fp-qAF"/>
                         </connections>
                     </toolbarItem>
-                    <toolbarItem implicitItemIdentifier="AF2CBAAD-373A-478F-BD88-B36F8D6FE96E" label="Shortcuts" paletteLabel="Shortcuts" tag="-1" image="ShortcutsPreferences" selectable="YES" id="Rzg-nJ-aHP">
+                    <toolbarItem implicitItemIdentifier="AF2CBAAD-373A-478F-BD88-B36F8D6FE96E" label="Shortcuts" paletteLabel="Shortcuts" tag="1" image="ShortcutsPreferences" selectable="YES" id="Rzg-nJ-aHP">
                         <connections>
                             <action selector="handleTappedToolbarItem:" target="-2" id="Oaf-qj-bvm"/>
                         </connections>
                     </toolbarItem>
-                    <toolbarItem implicitItemIdentifier="C04D996D-3DD4-40D7-B1F5-3B9E99F4C11F" label="Hosts" paletteLabel="Hosts" tag="-1" image="HostsPreferences" selectable="YES" id="F7E-0o-4KX">
+                    <toolbarItem implicitItemIdentifier="C04D996D-3DD4-40D7-B1F5-3B9E99F4C11F" label="Hosts" paletteLabel="Hosts" tag="2" image="HostsPreferences" selectable="YES" id="F7E-0o-4KX">
                         <connections>
                             <action selector="handleTappedToolbarItem:" target="-2" id="h8e-E0-sN6"/>
                         </connections>
