--- a/cuImage/HostsPreferencesViewController.xib
+++ b/cuImage/HostsPreferencesViewController.xib
@@ -19,30 +19,15 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="cAb-nW-fFu">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="266"/>
+            <rect key="frame" x="0.0" y="0.0" width="500" height="295"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCd-7M-0Ff">
-                    <rect key="frame" x="18" y="229" width="37" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Host:" id="SWh-CA-qNC">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
                 <box title="Box" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="60g-gm-lpO" userLabel="Host Preferences Content Box">
-                    <rect key="frame" x="17" y="16" width="465" height="205"/>
+                    <rect key="frame" x="17" y="16" width="465" height="232"/>
                     <view key="contentView" id="ac9-ZY-0kj">
-                        <rect key="frame" x="2" y="2" width="461" height="201"/>
+                        <rect key="frame" x="2" y="2" width="461" height="228"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="cbc-7W-OKR">
-                                <rect key="frame" x="0.0" y="49" width="461" height="152"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="152" id="tye-aq-xNd"/>
-                                    <constraint firstAttribute="width" constant="461" id="xLo-6a-Nfm"/>
-                                </constraints>
-                            </customView>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QF9-qe-ZPG">
                                 <rect key="frame" x="377" y="13" width="70" height="32"/>
                                 <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7iJ-tS-UOQ">
@@ -66,8 +51,15 @@ DQ
                                     <action selector="handleTappedButton:" target="-2" id="G2h-fQ-bCz"/>
                                 </connections>
                             </button>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="cbc-7W-OKR">
+                                <rect key="frame" x="0.0" y="51" width="461" height="177"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="177" id="tye-aq-xNd"/>
+                                    <constraint firstAttribute="width" constant="461" id="xLo-6a-Nfm"/>
+                                </constraints>
+                            </customView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLv-JV-Boy">
-                                <rect key="frame" x="18" y="22" width="94" height="17"/>
+                                <rect key="frame" x="194" y="22" width="94" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Validate Result" id="J5V-bl-31N">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -78,19 +70,27 @@ DQ
                         <constraints>
                             <constraint firstItem="dCF-dO-hq2" firstAttribute="centerY" secondItem="QF9-qe-ZPG" secondAttribute="centerY" id="8mf-wZ-1zf"/>
                             <constraint firstItem="cbc-7W-OKR" firstAttribute="top" secondItem="ac9-ZY-0kj" secondAttribute="top" id="CtK-om-FWS"/>
-                            <constraint firstItem="QF9-qe-ZPG" firstAttribute="top" secondItem="cbc-7W-OKR" secondAttribute="bottom" constant="8" id="IOv-LD-fF1"/>
+                            <constraint firstItem="QF9-qe-ZPG" firstAttribute="top" secondItem="cbc-7W-OKR" secondAttribute="bottom" constant="10" id="IOv-LD-fF1"/>
                             <constraint firstAttribute="trailing" secondItem="cbc-7W-OKR" secondAttribute="trailing" id="QAG-Dz-qzs"/>
                             <constraint firstItem="BLv-JV-Boy" firstAttribute="centerY" secondItem="dCF-dO-hq2" secondAttribute="centerY" id="R6J-hE-aqa"/>
                             <constraint firstAttribute="bottom" secondItem="QF9-qe-ZPG" secondAttribute="bottom" constant="20" id="Yox-cC-mQu"/>
                             <constraint firstAttribute="trailing" secondItem="QF9-qe-ZPG" secondAttribute="trailing" constant="20" id="YyG-RL-k26"/>
                             <constraint firstItem="cbc-7W-OKR" firstAttribute="leading" secondItem="ac9-ZY-0kj" secondAttribute="leading" id="a8Q-GL-JXR"/>
-                            <constraint firstItem="BLv-JV-Boy" firstAttribute="leading" secondItem="ac9-ZY-0kj" secondAttribute="leading" constant="20" id="dsI-wx-Q1q"/>
+                            <constraint firstItem="dCF-dO-hq2" firstAttribute="leading" secondItem="BLv-JV-Boy" secondAttribute="trailing" constant="8" id="hmw-IF-361"/>
                             <constraint firstItem="QF9-qe-ZPG" firstAttribute="leading" secondItem="dCF-dO-hq2" secondAttribute="trailing" constant="12" id="xEn-Gk-xA5"/>
                         </constraints>
                     </view>
                 </box>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCd-7M-0Ff">
+                    <rect key="frame" x="18" y="256" width="37" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Host:" id="SWh-CA-qNC">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HHV-0w-add">
-                    <rect key="frame" x="59" y="224" width="105" height="26"/>
+                    <rect key="frame" x="59" y="251" width="105" height="26"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="SDC-s0-w48"/>
                     </constraints>
@@ -111,10 +111,10 @@ DQ
                 <constraint firstAttribute="trailing" secondItem="60g-gm-lpO" secondAttribute="trailing" constant="21" id="Ril-Bd-3hf"/>
                 <constraint firstItem="60g-gm-lpO" firstAttribute="leading" secondItem="cAb-nW-fFu" secondAttribute="leading" constant="20" id="RxD-fH-yC8"/>
                 <constraint firstItem="HHV-0w-add" firstAttribute="leading" secondItem="SCd-7M-0Ff" secondAttribute="trailing" constant="8" id="kGw-kM-TxT"/>
-                <constraint firstItem="SCd-7M-0Ff" firstAttribute="top" secondItem="cAb-nW-fFu" secondAttribute="top" constant="20" id="q2s-9h-utj"/>
+                <constraint firstItem="SCd-7M-0Ff" firstAttribute="top" secondItem="cAb-nW-fFu" secondAttribute="top" constant="22" id="q2s-9h-utj"/>
                 <constraint firstItem="60g-gm-lpO" firstAttribute="top" secondItem="SCd-7M-0Ff" secondAttribute="bottom" constant="10" id="vGp-nS-Ced"/>
             </constraints>
-            <point key="canvasLocation" x="150" y="121"/>
+            <point key="canvasLocation" x="150" y="135.5"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="pFE-Vv-5Dx"/>
     </objects>
