--- a/cuImage/StatusItemController.xib
+++ b/cuImage/StatusItemController.xib
@@ -33,6 +33,9 @@
                         <action selector="handleTappedMenuItem:" target="-2" id="fop-r1-5BB"/>
                     </connections>
                 </menuItem>
+                <menuItem title="Feedback…" id="ysP-BG-gE2">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                </menuItem>
                 <menuItem title="About…" id="mYk-F7-yO9">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
